# tollgate

./: .env.example  .gitignore  DESIGN.md  docker-compose.yml  package-lock.json  package.json  slack-app-manifest.yaml
apps/api/: BUILD_LOG.md  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_policies_and_approvals.py  003_switch_api_key_to_hmac.py  004_add_slack_integration.py  005_add_google_auth.py
apps/api/scripts/: latency_test.py  verify_prompt_2.py
apps/api/src/tollgate/: __init__.py  background.py  config.py  database.py  dependencies.py  encryption.py  logging.py  main.py
apps/api/src/tollgate/middleware/: auth.py
apps/api/src/tollgate/models/: __init__.py  action.py  agent.py  approval_request.py  base.py  organization.py  policy.py  slack_integration.py  user.py
apps/api/src/tollgate/routes/: __init__.py  agents.py  auth.py  health.py  policies.py  slack.py
apps/api/src/tollgate/routes/v1/: actions.py  ai_policy.py  check.py  dashboard.py
apps/api/src/tollgate/schemas/: __init__.py  action.py  agent.py  approval.py  auth.py  common.py  policy.py
apps/api/src/tollgate/services/: __init__.py  action.py  agent.py  approval.py  auth.py  policy.py  policy_cache.py  policy_evaluator.py  slack.py  slack_notifier.py
apps/api/tests/: __init__.py  conftest.py  test_agents.py  test_approval_flow.py  test_auth.py  test_check.py  test_policies.py  test_policy_evaluator.py  test_slack.py
apps/dashboard/: package-lock.json  package.json
tollgate-smoke-test/: test_sdk.py
(+72 files in other folders)
